[package]
name = "delay-queue"
version = "0.2.0"
license = "MIT/Apache-2.0"
authors = ["Tiago Cardoso <tbcardoso@outlook.com>"]
description = "A concurrent unbounded blocking queue where each element can only be removed when its delay expires."
repository = "https://github.com/tbcardoso/rust-delay-queue"
readme = "README.md"
keywords = ["concurrency", "delay", "queue", "wait", "schedule"]
categories = ["concurrency"]

[badges]
travis-ci = { repository = "tbcardoso/rust-delay-queue" }
appveyor = { repository = "tbcardoso/rust-delay-queue" }

[dependencies]

[dev-dependencies]
timebomb = "0.1.2"
